--- a/threecolumn.html
+++ b/threecolumn.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="style.css" />
+    <script src="https://www.desmos.com/api/v1.6/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -47,30 +48,26 @@
 								<!-- Left Sidebar -->
 									<section>
 										<header>
-											<h2>Ipsum Dolor</h2>
+											<h2>Swift/iOS</h2>
 										</header>
 										<p>
-											Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+											
 										</p>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<img src ="images/iOS1.jpg" class="container"></img>
+                      <img src ="images/iOS2.jpg" class="container"></img>
+                      <img src ="images/iOS3.jpg" class="container"></img>
+                      
 										</ul>
 									</section>
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+											<h2></h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Nec sociis natoque</a></li>
-											<li><a href="#">Penatibus et magnis</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<img src ="images/iOS4.jpeg" class="container"></img>
+                      <img src ="images/iOS5.png" class="container"></img>
+                      <img src ="images/iOS6.jpg" class="container"></img>
 										</ul>
 									</section>
 							</div>
@@ -83,32 +80,16 @@
 											<h3>A generic three column layout</h3>
 										</header>
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+                      <iframe class = "container" width="560" height="315" src="https://www.youtube.com/embed/sPAAynBZTF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</p>
 										<p>
-											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-											hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-											montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-											lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-											hendrerit.
+											<iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/H71Y4bQ2_aU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</p>
 										<p>
-											Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-											mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-											egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-											vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+											<iframe class="container" width="560" height="315" src="https://www.youtube.com/embed/EpXCl6rkSFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</p>
+                    <p>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/f3xFpRWZEz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 									</section>
 
 							</div>
@@ -117,31 +98,38 @@
 								<!-- Right Sidebar -->
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+											<h2>Links</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Nec sociis natoque</a></li>
-											<li><a href="#">Penatibus et magnis</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="https://developer.apple.com/games/">Apple GPUS</a></li>
+											<li><a href="https://developer.apple.com/apple-arcade/">Apple Arcade</a></li>
+											<li><a href="https://github.com/PacktPublishing/Swift-Game-Development-Third-Edition">Free Textbook on Swift Game Dev</a></li>
+											<li><a href="https://github.com/search?q=Swift+3d">Github "Swift 3d" search</a></li>
+											<li><a href="https://github.com/JohnSundell/ImagineEngine">Open Source Game Engine Code</a></li>
+											<li><a href="https://developer.apple.com/swift/">Offical Apple Swift</a></li>
 										</ul>
 									</section>
 									<section>
 										<header>
-											<h2>Ipsum Dolor</h2>
+											<h2>Links By Topic</h2>
 										</header>
 										<p>
-											Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+											Libraries
 										</p>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="https://developer.apple.com/documentation/realitykit/">Reality Kit</a></li>
+											<li><a href="https://developer.apple.com/documentation/scenekit/">Reality Kit</a></li>
+											<li><a href="https://developer.apple.com/augmented-reality/">AR Kit</a></li>
+											<li><a href="https://developer.apple.com/spritekit/">Sprite Kit</a></li>
 										</ul>
+                    <p>
+                      Tutorials
+
+                    </p>
+                      <li><a href="https://developer.apple.com/xcode/swiftui/">Swift UI</a></li>
+											<li><a href="https://www.swift.org/documentation/">Swift Documentation</a></li>
+											<li><a href="https://developer.apple.com/metal/cpp/">Metal and C++</a></li>
+											<li><a href="https://developer.apple.com/documentation/xcode/">Xcode Developer Tools</a></li>
 									</section>
 
 							</div>
@@ -162,34 +150,34 @@
 											<div class="row">
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="https://github.com/nenuadrian/3D-GPS-location-map-rendering-game-base-swift-ios-scenekit">Repository Pokemon Go like AR game</a></li>
+														<li><a href="https://github.com/Mascaz/MacOS-Metal-Game-Engine">Metal Based Game Engine</a></li>
+														<li><a href="https://www.raywenderlich.com/5146-glkit-tutorial-for-ios-getting-started-with-opengl-es">Intro to GLKit</a></li>
+														<li><a href="https://www.raywenderlich.com/7475-metal-tutorial-getting-started">Intro To Metal</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="link-list last-child">
+														<li><a href="https://developer.apple.com/metal/sample-code/">Metal Sample Code</a></li>
+														<li><a href="https://www.youtube.com/c/2etime">Metal Sample Code</a></li>
+														<li><a href="https://www.raywenderlich.com/books/metal-by-tutorials">Metal Tutorials by Topic</a></li>
 														<li><a href="#">Eu varius vitae magna</a></li>
 													</ul>
 												</div>
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="https://www.hackingwithswift.com/100/swiftui">Hacking with Swift</a></li>
+														<li><a href="https://bignerdranch.com/blog/now-available-swift-programming-the-big-nerd-ranch-guide-third-edition/">Great intro to swift textbook</a></li>
+														<li><a href="https://medium.com/@darrenrothstein/xcode-game-tutorial-for-beginners-building-a-simple-game-part-i-5f777a62c31">Basic Game in Xcode</a></li>
+														<li><a href="https://github.com/dkhamsing/open-source-ios-apps">Open Source Swift Games</a></li>
 													</ul>
 												</div>
 												<div class="col-3 col-12-small">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="https://github.com/pointfreeco/isowords">Basic Puzzle Game</a></li>
+														<li><a href="https://github.com/seanhess/wizardwar">Open World Strategy Game</a></li>
+														<li><a href="https://github.com/woguan/Legend-Wings">Top Down Arcade Shooter like Grandia</a></li>
+														<li><a href="https://github.com/robreuss/VirtualGameController">Virtual Controller Script</a></li>
 													</ul>
 												</div>
 											</div>
@@ -203,10 +191,13 @@
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
+											<div class ="container"  id="calculator" style="width: 700px; height: 400px;"></div>
+
+                      <script >
+                      var elt = document.getElementById('calculator');
+                      var calculator = Desmos.GraphingCalculator(elt);
+                      calculator.setExpression({id:'graph1', latex:'y=x^2'});
+                      </script>
 										</p>
 									</section>
 
